// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing EmptyListText Renders EmptyListText 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontSize": 16,
        },
      ]
    }
  >
    List is empty!
  </Text>
</View>
`;

exports[`Testing EmptyListText Renders default empty list text 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontSize": 16,
        },
      ]
    }
  >
    NEW, UPDATED, LONGER TEXT THAT SHOULD BE SCREEN SIZE
  </Text>
</View>
`;
